RESOLVED FIXED25652
wx port's PlatformPath may be deleted while in use
https://bugs.webkit.org/show_bug.cgi?id=25652
Summary wx port's PlatformPath may be deleted while in use
Kevin Watters
Reported 2009-05-08 13:58:38 PDT
PathWx.cpp's Path(const Path& path) constructor assigns m_path to another Path object's m_path. This is invalid since wx refcounts the underlying object and may delete it later.
Attachments
Use wxGraphicsPath copy constructor to avoid refcount bug (1.23 KB, patch)
2009-05-08 14:01 PDT, Kevin Watters
kevino: review+
Kevin Watters
Comment 1 2009-05-08 14:01:09 PDT
Created attachment 30140 [details] Use wxGraphicsPath copy constructor to avoid refcount bug Use wxGraphicsPath(const wxGraphicsPath&) instead of just stealing a reference to the object, so that we aren't bit by a segfault (or worse) later when the wxObject's refcount goes to zero.
Kevin Ollivier
Comment 2 2009-05-08 15:53:59 PDT
Landed in r43418, thanks!
Note You need to log in before you can comment on or make changes to this bug.