Reviewed by Kevin Ollivier.

Make sure the path's refdata isn't deleted before we're done with the object.

https://bugs.webkit.org/show_bug.cgi?id=25652


Canonical link: https://commits.webkit.org/35435@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@43418 268f45cc-cd09-0410-ab3c-d52691b4dbfc